--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                     <source>16</source>
                     <target>16</target>
                 </configuration>
